# open-analytics

./: .dockerignore  Cargo.toml  Dockerfile  Gemfile  README  docker-compose.yml  schema.sql
ops/containers/open-analytics/: build.sh  destroy.sh  run.sh  shell.sh  start.sh  stop.sh
ops/containers/open-analytics-db/: build.sh  destroy.sh  run.sh  shell.sh  start.sh  stop.sh
spec/: spec_helper.rb
spec/request/: open_analytics_api_spec.rb
src/: app.rs  db.rs  main.rs
webpack/: Makefile  package.json  webpack.config.js
webpack/src/: Hello.js  index.js
